--- a/src/app/auth/shared/sidebar/sidebar.component.html
+++ b/src/app/auth/shared/sidebar/sidebar.component.html
@@ -7,6 +7,7 @@
 
     <a href="http://www.unive.it" class="simple-text logo-normal">
         Ca' Foscari
+        <small>Internships Manager</small>
     </a>
 </div>
 
