chore: add not auth index component

--- a/src/app/auth/shared/sidebar/sidebar.component.html
+++ b/src/app/auth/shared/sidebar/sidebar.component.html
@@ -6,8 +6,7 @@
     </a>
 
     <a href="http://www.unive.it" class="simple-text logo-normal">
-        Ca' Foscari
-        <small>Internships Manager</small>
+        <small translate>Global.InternshipsManager</small>
     </a>
 </div>
 
