--- a/src/app/layouts/auth/auth-layout.component.html
+++ b/src/app/layouts/auth/auth-layout.component.html
@@ -1,6 +1,6 @@
 
 <div class="wrapper">
-    <div class="sidebar" data-background-color="black" data-active-color="danger">
+    <div class="sidebar" data-background-color="white" data-active-color="danger">
         <sidebar-cmp></sidebar-cmp>
     </div>
     <div class="main-panel">
@@ -12,4 +12,4 @@
     </div>
 
 </div>
-<fixedplugin-cmp></fixedplugin-cmp>
+<!-- <fixedplugin-cmp></fixedplugin-cmp> -->
