fix: remove duplicte import of sweetalert 2 chore: added custom login error messages docs: rebuild

--- a/src/app/no-auth/company-login/company-login.component.html
+++ b/src/app/no-auth/company-login/company-login.component.html
@@ -22,7 +22,7 @@
 </nav>
 
 <div class="wrapper wrapper-full-page">
-    <div class="full-page login-page" data-color="" data-image="assets/img/background/background-2.jpg">
+    <div class="full-page login-page" data-color="" data-image="assets/img/background/campus.jpg">
         <!--   you can change the color of the filter page using: data-color="blue | azure | green | orange | red | purple" -->
         <div class="content">
             <div class="container">
@@ -59,7 +59,7 @@
         <footer class="footer footer-transparent">
             <div class="container">
                 <div class="copyright">
-                    &copy; {{test | date: 'yyyy'}} -
+                    &copy; {{today | date: 'yyyy'}} -
                     <a href="http://www.giacomodeliberali.com">Giacomo De Liberali</a>
                 </div>
             </div>
