--- a/src/app/no-auth/lock/lock.component.html
+++ b/src/app/no-auth/lock/lock.component.html
@@ -17,7 +17,7 @@
     </div>
 </nav>
 <div class="wrapper wrapper-full-page">
-    <div class="full-page lock-page" data-color="green" data-image="assets/img/background/background-5.png">
+    <div class="full-page lock-page" data-color="green" data-image="assets/img/background/campus.png">
     <!--   you can change the color of the filter page using: data-color="blue | azure | green | orange | red | purple" -->
         <div class="content">
             <form method="#" action="#">
@@ -36,7 +36,7 @@
         <footer class="footer footer-transparent">
                 <div class="container">
                     <div class="copyright">
-                        &copy; {{test | date: 'yyyy'}} -
+                        &copy; {{today | date: 'yyyy'}} -
                         <a href="http://www.giacomodeliberali.com">Giacomo De Liberali</a>
                     </div>
                 </div>
