core: add 404 route handling core: add shared module component

--- a/src/app/no-auth/lock/lock.component.html
+++ b/src/app/no-auth/lock/lock.component.html
@@ -17,13 +17,13 @@
     </div>
 </nav>
 <div class="wrapper wrapper-full-page">
-    <div class="full-page lock-page" data-color="green" data-image="assets/img/background/campus.png">
+    <div class="full-page lock-page" data-color="green" data-image="assets/img/background/campus.jpg">
     <!--   you can change the color of the filter page using: data-color="blue | azure | green | orange | red | purple" -->
         <div class="content">
             <form method="#" action="#">
                 <div class="card card-lock">
                     <div class="author">
-                        <img class="avatar" src="assets/img/faces/face-2.jpg" alt="...">
+                        <img class="avatar" src="assets/img/background/campus.jpg" alt="...">
                     </div>
                     <h4>Chet Faker</h4>
                     <div class="form-group">
