--- a/src/app/no-auth/register/register.component.html
+++ b/src/app/no-auth/register/register.component.html
@@ -105,7 +105,7 @@
         <footer class="footer footer-transparent">
             <div class="container">
                 <div class="copyright">
-                    &copy; {{test | date: 'yyyy'}} -
+                    &copy; {{today | date: 'yyyy'}} -
                     <a href="http://www.giacomodeliberali.com">Giacomo De Liberali</a>
                 </div>
             </div>
