--- a/src/app/auth/shared/footer/footer.component.html
+++ b/src/app/auth/shared/footer/footer.component.html
@@ -1,7 +1,8 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by <a href="http://www.giacomodeliberali.com">Giacomo De Liberali</a>
+            &copy; {{today | date: 'yyyy'}} -
+            <a href="http://www.giacomodeliberali.com">Giacomo De Liberali</a>
         </div>
     </div>
 </footer>
