--- a/src/app/auth/shared/navbar/navbar.component.html
+++ b/src/app/auth/shared/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar bar2"></span>
                 <span class="icon-bar bar3"></span>
             </button>
-            <a class="navbar-brand">{{getTitle()}}</a>
+            <a class="navbar-brand">{{title | async}}</a>
         </div>
     </div>
 </nav>
