fix: change culture in lazy modules chore: add edit user page

--- a/src/app/auth/shared/sidebar/sidebar.component.html
+++ b/src/app/auth/shared/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
             <div class="collapse" id="user">
                 <ul class="nav">
                     <li routerLinkActive="active">
-                        <a [routerLink]="'/auth/user/view'">
+                        <a [routerLink]="'/auth/user'">
                             <span class="sidebar-mini">P</span>
                             <span class="sidebar-normal" translate>Dictionary.Profile</span>
                         </a>
