--- a/src/app/auth/user/view/user-view.component.html
+++ b/src/app/auth/user/view/user-view.component.html
@@ -10,24 +10,45 @@
                     </div>
                     <div class="card-content">
                         <div class="form-group">
-                            <label>Email address</label>
-                            <input type="email" [value]="authService.currentUser.email" class="form-control" readonly>
+                            <label translate>Dictionary.Email</label>
+                            <p class="form-control-static">{{authService.currentUser.email}}</p>
                         </div>
                         <div class="form-group">
-                            <label>Data registrazione</label>
-                            <input type="text" [value]="authService.currentUser.registrationDate | date" class="form-control" readonly>
+                            <label translate>Dictionary.RegistrationDate</label>
+                            <p class="form-control-static">{{authService.currentUser.registrationDate | date}}</p>
                         </div>
                         <div class="form-group">
-                            <label>Ruolo</label>
-                            <input type="text" [value]="authService.currentUser.role.name" class="form-control" readonly>
-                        </div>
-                        <div class="form-group">
-                            <label>Recapiti telefonici:</label>
-                            <input type="text" [value]="'Nessuno'" class="form-control" readonly *ngIf="authService.currentUser.phone.length == 0">
-                            <input type="text" [value]="phone" class="form-control" readonly *ngFor="let phone of authService.currentUser.phone">
+                            <label translate>Dictionary.Role</label>
+                            <p class="form-control-static">{{('Roles.' + authService.currentUser.role.name) | translate}}</p>
                         </div>
 
-                        <button type="button" class="btn btn-fill btn-info" [routerLink]="'/auth/user/edit'">Modifica</button>
+                        <div class="form-group">
+                            <label translate>Dictionary.Phones</label>
+                            <p class="form-control-static" *ngIf="authService.currentUser.phone.length == 0">{{'Dictionary.None' | translate}}</p>
+                            <p class="form-control-static" *ngFor="let phone of authService.currentUser.phone; let i = index">
+                                <a href="tel:{{phone}}">{{phone}}</a>
+                            </p>
+                        </div>
+
+                        <div class="text-right">
+                            <button type="button" class="btn btn-default" [routerLink]="'/auth/user/edit'">{{'Dictionary.Edit' | translate}}</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-calendar">
+                    <div class="card-header">
+                        <h4 class="card-title">
+                            {{'Dictionary.Language' | translate}}
+                        </h4>
+                    </div>
+                    <div class="card-content">
+                        <div style="max-width: 300px">
+                            <label translate>Dictionary.ChangeAppLanguage</label>
+                            <select class="selectpicker" data-style="btn btn-block" (change)="onChangeLanguage()" [(ngModel)]="currentLanguage">
+                                <option value="it">{{'Dictionary.Italian' | translate}}</option>
+                                <option value="en">{{'Dictionary.English' | translate}}</option>ì
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
