--- a/src/app/shared/not-found/not-found.component.html
+++ b/src/app/shared/not-found/not-found.component.html
@@ -16,6 +16,7 @@
                     </div>
                     <h4 translate>Pages.NotFound.Title</h4>
                     <button type="button" class="btn btn-wd" [routerLink]="['/']" translate>Dictionary.Back</button>
+                    <button type="button" class="btn btn-wd" [routerLink]="['/login']" translate>Dictionary.Login</button>
                 </div>
             </form>
         </div>
