--- a/src/app/no-auth/company-login/company-login.component.html
+++ b/src/app/no-auth/company-login/company-login.component.html
@@ -36,15 +36,15 @@
                                 <div class="card-content">
                                     <div class="form-group">
                                         <label>Email address</label>
-                                        <input type="email" placeholder="Enter email" class="form-control input-no-border">
+                                        <input type="email" placeholder="Enter email" class="form-control input-no-border" [(ngModel)]="email" name="email">
                                     </div>
                                     <div class="form-group">
                                         <label>Password</label>
-                                        <input type="password" placeholder="Password" class="form-control input-no-border">
+                                        <input type="password" placeholder="Password" class="form-control input-no-border" [(ngModel)]="password" name="password">
                                     </div>
                                 </div>
                                 <div class="card-footer text-center">
-                                    <button type="button" class="btn btn-fill btn-wd ">{{'Dictionary.Login' | translate}}</button>
+                                    <button type="button" class="btn btn-fill btn-wd " (click)="login()">{{'Dictionary.Login' | translate}}</button>
                                     <div class="forgot">
                                         <hr> {{'Pages.Login.Else' | translate}}
                                         <a [routerLink]="['/login']">{{'Pages.CompanyLogin.LoginAsUnive' | translate}}</a>
