--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,47 @@ a {
         margin-left: 15px;
     }
 }
+
+.datepicker-dropdown.datepicker-orient-top:before,
+.datepicker-dropdown.datepicker-orient-top:after {
+    display: none !important;
+}
+
+body.blur .wrapper {
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.app-spinner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    & .spinner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -60px 0 0 -60px;
+        border: 8px solid #f3f3f3;
+        border-top: 8px solid $primary-color;
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+    }
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+}
