--- a/src/app/auth/internships/own-company/internships-own-company.component.html
+++ b/src/app/auth/internships/own-company/internships-own-company.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title" translate>Pages.Internships.OwnInternships</h4>
+                        <h4 class="card-title" translate>Dictionary.OwnInternships</h4>
                         <p class="category" translate>Pages.Company.SubTitle</p>
                     </div>
                     <div class="card-content table-responsive table-full-width">
@@ -19,21 +19,24 @@
                             </thead>
                             <tbody>
                                 <tr *ngIf="isLoading">
-                                    <td [attr.colspan]="internshipTable.headerRow.length" class="text-center">
+                                    <td [attr.colspan]="internshipTable.headerRow.length + 1" class="text-center">
                                         <span translate>Dictionary.Loading</span>
                                         <i class="fas fa-spin fa-spinner"></i>
                                     </td>
                                 </tr>
                                 <tr *ngIf="internshipTable.dataRows.length == 0 && !isLoading">
-                                    <td [attr.colspan]="internshipTable.headerRow.length" class="text-center">
+                                    <td [attr.colspan]="internshipTable.headerRow.length + 1" class="text-center">
                                         <span translate>Dictionary.NoResults</span>
                                     </td>
                                 </tr>
                                 <tr *ngFor="let row of internshipTable.dataRows">
-                                    <td>
-                                        <button class="btn btn-icon btn-simple" [routerLink]="'/auth/internships/edit/' + row.id">
+                                    <td class="td-actions text-center">
+                                        <a rel="tooltip" title="{{'Dictionary.Edit' | translate}}" [routerLink]="'/auth/internships/edit/' + row.id" class="btn btn-primary btn-simple btn-xs">
                                             <i class="ti-pencil"></i>
-                                        </button>
+                                        </a>
+                                        <a rel="tooltip" title="{{'Dictionary.Details' | translate}}" [routerLink]="'/auth/internships/details/' + row.id" class="btn btn-primary btn-simple btn-xs">
+                                            <i class="fas fa-eye"></i>
+                                        </a>
                                     </td>
                                     <td *ngFor="let col of internshipTable.headerRow; let colIndex = index" class="{{col.class || ''}}">
                                         {{val(row,col.value) | tablecol:col.pipe}}
