--- a/src/app/auth/internships/view/internships-view.component.html
+++ b/src/app/auth/internships/view/internships-view.component.html
@@ -11,6 +11,7 @@
                         <table class="table">
                             <thead>
                                 <tr>
+                                    <th></th>
                                     <th *ngFor="let col of internshipTable.headerRow; let colIndex = index" class="{{col.class || ''}}">
                                         {{(col.name) | translate}}
                                     </th>
@@ -18,18 +19,23 @@
                             </thead>
                             <tbody>
                                 <tr *ngIf="isLoading">
-                                    <td [attr.colspan]="internshipTable.headerRow.length" class="text-center">
+                                    <td [attr.colspan]="internshipTable.headerRow.length + 1" class="text-center">
                                         <span translate>Dictionary.Loading</span>
                                         <i class="fas fa-spin fa-spinner"></i>
                                     </td>
                                 </tr>
                                 <tr *ngIf="internshipTable.dataRows.length == 0 && !isLoading">
-                                    <td [attr.colspan]="internshipTable.headerRow.length" class="text-center">
+                                    <td [attr.colspan]="internshipTable.headerRow.length + 1" class="text-center">
                                         <span translate>Dictionary.NoResults</span>
                                     </td>
                                 </tr>
                                 <tr *ngFor="let row of internshipTable.dataRows">
-                                    <td *ngFor="let col of internshipTable.headerRow; let colIndex = index">
+                                    <td class="td-actions text-center">
+                                        <a rel="tooltip" title="{{'Dictionary.Details' | translate}}" [routerLink]="'/auth/internships/details/' + row.id" class="btn btn-primary btn-simple btn-xs">
+                                            <i class="fas fa-eye"></i>
+                                        </a>
+                                    </td>
+                                    <td *ngFor="let col of internshipTable.headerRow; let colIndex = index" class="{{col.class || ''}}">
                                         {{val(row,col.value) | tablecol:col.pipe}}
                                     </td>
                                 </tr>
