fix(auth): fix company registration process

--- a/src/app/auth/shared/sidebar/sidebar.component.html
+++ b/src/app/auth/shared/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
 
     <div class="user">
         <div class="photo">
-            <img src="{{authService.currentUser.image || 'assets/img/default-profile-image.png'}}" />
+            <img src="{{authService.currentUser.image || 'assets/img/default-user.png'}}" />
         </div>
         <div class="info">
             <a data-toggle="collapse" href="#user" class="collapsed">
