--- a/src/app/no-auth/register/register.component.html
+++ b/src/app/no-auth/register/register.component.html
@@ -12,8 +12,8 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a routerLinkActive="active" [routerLink]="['/pages/login']" class="btn">
-                        Looking to login?
+                    <a routerLinkActive="active" [routerLink]="['/login/COMPANY']" class="btn" translate>
+                        Pages.Index.LookingForLogin
                     </a>
                 </li>
             </ul>
@@ -29,71 +29,61 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="header-text">
-                            <h2>Paper Dashboard PRO</h2>
-                            <h4>Register for free and experience the dashboard today.</h4>
+                            <h2 translate>Pages.Index.Title</h2>
+                            <h4 translate>Completa i campi sottostanti e crea un nuovo</h4>
                             <hr>
                         </div>
                     </div>
-                    <div class="col-md-4 col-md-offset-2">
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="icon icon-danger">
-                                    <i class="ti ti-user"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h5>Free Account</h5>
-                                Here you can write a feature description for your dashboard, let the users know what is the value that you give them.
-                            </div>
-                        </div>
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="icon icon-warning">
-                                    <i class="ti-bar-chart-alt"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h5>Awesome Performances</h5>
-                                Here you can write a feature description for your dashboard, let the users know what is the value that you give them.
-                            </div>
-                        </div>
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="icon icon-info">
-                                    <i class="ti-headphone"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h5>Global Support</h5>
-                                Here you can write a feature description for your dashboard, let the users know what is the value that you give them.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <form method="#" action="#">
+                    <div class="col-md-4 col-md-offset-4">
+                        <form [formGroup]="myform">
                             <div class="card card-plain">
                                 <div class="content">
-                                    <div class="form-group">
-                                        <input type="email" placeholder="Your First Name" class="form-control">
+                                    <div>
+                                        <label>
+                                            Dettagli amministratore azienda
+                                        </label>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" placeholder="Your Last Name" class="form-control">
+                                        <input type="text" placeholder="{{'Dictionary.Name' | translate}}" formControlName="name" class="form-control" [(ngModel)]="user.name">
+                                        <small class="text-danger" *ngIf="myform.controls.name.invalid && myform.controls.name.touched">Full name is mandatory</small>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" placeholder="Company" class="form-control">
+                                        <input type="text" placeholder="{{'Dictionary.Phone' | translate}}" formControlName="phone" class="form-control" [(ngModel)]="user.phone[0]">
+                                        <small class="text-danger" *ngIf="myform.controls.phone.invalid && myform.controls.phone.touched">Phone is mandatory</small>
+                                    </div>
+                                    <div>
+                                        <label>
+                                            Dettagli azienda
+                                        </label>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" placeholder="Enter email" class="form-control">
+                                        <input type="text" placeholder="{{'Dictionary.CompanyName' | translate}}" formControlName="companyName" class="form-control" [(ngModel)]="company.name">
+                                        <small class="text-danger" *ngIf="myform.controls.companyName.invalid && myform.controls.companyName.touched">Company name is mandatory</small>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" placeholder="Password" class="form-control">
+                                        <input type="text" placeholder="{{'Dictionary.VatCode' | translate}}" formControlName="vatCode" class="form-control" [(ngModel)]="company.vatCode">
+                                        <small class="text-danger" *ngIf="myform.controls.vatCode.invalid && myform.controls.vatCode.touched">VAT code is mandatory</small>
+                                    </div>
+                                    <div>
+                                        <label>
+                                            Dettagli account
+                                        </label>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" placeholder="Password Confirmation" class="form-control">
+                                        <input type="email" placeholder="{{'Dictionary.Email' | translate}}" class="form-control" formControlName="email" [(ngModel)]="user.email">
+                                        <small class="text-danger" *ngIf="myform.controls.email.invalid && myform.controls.email.touched">Email is required and format should be <i>john@doe.com</i>.</small>
+                                    </div>
+                                    <div class="form-group" formGroupName="passwords">
+                                        <input type="password" placeholder="{{'Dictionary.Password' | translate}}" formControlName="password" class="form-control" [(ngModel)]="user.password">
+                                        <small class="text-danger" *ngIf="myform.controls.passwords.controls.password.invalid && myform.controls.passwords.controls.password.touched">Password is too short</small>
+                                    </div>
+                                    <div class="form-group" formGroupName="passwords">
+                                        <input type="password" placeholder="{{'Dictionary.RepeatPassword' | translate}}" formControlName="repeatPassword" class="form-control">
+                                        <small class="text-danger" *ngIf="myform.controls.passwords.controls.repeatPassword.touched && myform.controls.passwords.errors?.mismatch">Password is different</small>
                                     </div>
                                 </div>
                                 <div class="footer text-center">
-                                    <button type="submit" class="btn btn-fill btn-danger btn-wd">Create Free Account</button>
+                                    <button type="submit" class="btn btn-fill btn-danger btn-wd" translate (click)="signup()" [disabled]="myform.invalid">Dictionary.CreateAccount</button>
                                 </div>
                             </div>
                         </form>
